Update role and permission repositories
